--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,153 @@
-.App {
-  text-align: center;
-}
+/** @format */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app_layout {
+  width: 100%;
+  height: 100vh;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header_section {
+  border: 1px solid rgb(220, 219, 219);
+  width: 100%;
+  height: 7vh;
+}
+.home_page {
+  width: 100%;
+  height: 92.5vh;
+}
+.header_navbar_section {
+  width: 100%;
+  height: 7vh;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+.nav_logo {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  padding: 5px;
+  font-weight: 400;
+  font-weight: 0.8rem;
+}
+.nav_bar_link_section {
+  width: 100px;
+  height: auto;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.profile_avatar {
+  width: 33px !important;
+  height: 33px !important;
+}
+.cart_link {
+  color: rgb(98, 97, 97);
+  font-size: 1.1rem;
+  margin: 5px 10px;
+  position: relative;
+}
+.cart_count {
+  position: absolute;
+  top: -7px;
+  right: -2px;
+  font-size: 0.8rem;
+  font-weight: 500;
+  color: crimson;
+}
+.loading_section,
+.empty_item_page {
+  width: 100%;
+  height: 93vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.empty_item_page {
+  font-size: 0.825rem;
+  font-weight: 400;
+  letter-spacing: 0.2px;
+}
+.spinner {
+  font-size: 2rem !important;
 }
 
-.App-link {
-  color: #61dafb;
+.item_card_container {
+  width: 100%;
+  height: 93vh;
+  overflow: scroll;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.item_card {
+  border: 1px solid rgb(210, 210, 210);
+  padding: 7px;
+  border-radius: 5px;
+  max-width: 350px;
+  width: 100%;
+  margin: 5px;
+}
+.item_title {
+  font-size: 0.875rem;
+  font-weight: 500;
+}
+.item_catagory {
+  margin-left: 5px;
+  font-size: 0.65rem;
+  font-weight: 400;
+  color: royalblue;
+}
+.item_image {
+  margin: 5px;
+  border-radius: 5px;
+  width: 90%;
+  height: 200px;
+}
+.item_description {
+  font-size: 0.7rem;
+  font-weight: 400;
+  margin: 5px;
+}
+.item_btn_container {
+  margin: 7px 0;
+  text-align: right;
+}
+.item_add_btn {
+  background-color: royalblue !important;
+  color: aliceblue !important;
+}
+.add_icon {
+  color: aliceblue !important;
+}
+.cart_header {
+  border: 1px solid rgb(215, 215, 215);
+  width: 100%;
+  height: 7vh;
+  display: flex;
+  align-items: center;
+}
+.back_btn {
+  background-color: transparent !important;
+}
+.title {
+  font-size: 0.95rem;
+  font-weight: 500;
+}
+.cart_section {
+  width: 100%;
+  height: 93vh;
+}
+.empty_cart {
+  width: 100%;
+  height: 93vh;
+  font-weight: 400;
+  font-size: 0.8rem;
+  letter-spacing: 0.2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
